Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quickstart (Testing)"
-description: "Start building awesome documentation in under 5 minutes"
+description: "Start building awesome documentation in under 5 minutes (Testing)"
 ---
 
 ## Setup your development
