Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Installation"
+sidebarTitle: "Installation"
 ---
 
-# Prerequisites 
+# Prerequisites
 
 - Fresh machine with Ubuntu 24.04 LTS (other Linux OS may work as well, but not tested). We do not recommend using machines that have other services running except you understand what you are doing.
 - System Requirements:
@@ -55,7 +56,7 @@ We can proceed to the next step, installing Wazuh, which serves as SIEM. This st
 
 ![Image(3) Pn](/images/image\(3\).png)
 
-After the Wazuh installation success, we deploy the Wazuh Agent in the machine. Insert your machine **IP Address **and **Wazuh Agent**. In example, as illustrated in Figure 4.
+After the Wazuh installation success, we deploy the Wazuh Agent in the machine. Insert your machine \*\*IP Address \*\*and **Wazuh Agent**. In example, as illustrated in Figure 4.
 
 ![Image(2) Pn](/images/image\(2\).png)
 
@@ -119,12 +120,12 @@ Execute step 15, to activate swap memory.
 
 **The default credential for T-Guard:**
 
-| **Service** | **Web Interface**   | **Username**     | **Password**           |
-| ----------- | ------------------- | ---------------- | ---------------------- |
-| Wazuh       | https://\<ip\>      | admin            | SecretPassword         |
-| DFIR-IRIS   | https://\<ip\>:8443 | administrator    | MySuperAdminPassword\! |
-| Shuffle     | http://\<ip\>:3001  | administrator    | MySuperAdminPassword\! |
-| MISP        | https://\<ip\>:1443 | admin@admin.test | admin                  |
+| **Service** | **Web Interface**   | **Username**                                | **Password**           |
+| ----------- | ------------------- | ------------------------------------------- | ---------------------- |
+| Wazuh       | https://\<ip\>      | admin                                       | SecretPassword         |
+| DFIR-IRIS   | https://\<ip\>:8443 | administrator                               | MySuperAdminPassword\! |
+| Shuffle     | http://\<ip\>:3001  | administrator                               | MySuperAdminPassword\! |
+| MISP        | https://\<ip\>:1443 | [admin@admin.test](mailto:admin@admin.test) | admin                  |
 
 ## Integration Steps
 
