--- a/installation.mdx
+++ b/installation.mdx
@@ -9,10 +9,10 @@ sidebarTitle: "Installation"
 - System Requirements:
 - Broadband internet connections
 
-|                                                                                         | **CPU** | **RAM** | **Storage** | **Remarks**                                            |
-| --------------------------------------------------------------------------------------- | :-----: | :-----: | :---------: | :----------------------------------------------------: |
-| **Minimum Requirements**<br />_For trial deployments_                                   | 4       | 8 GB    | 50 GB       | Swap memory activation required—see Installation Steps |
-| **Standard Requirements**<br />_For production environments and continuous development_ | 8       | 12 GB   | 100 GB      | No need swap memory                                    |
+|                                                                                         | **CPU** | **RAM**<br />**(GB)** | **Storage**<br />**(GB)** | **Remarks**                     |
+| --------------------------------------------------------------------------------------- | :-----: | :-------------------: | :-----------------------: | :-----------------------------: |
+| **Minimum Requirements**<br />_For trial deployments_                                   | 4       | 8                     | 50                        | Swap memory activation required |
+| **Standard Requirements**<br />_For production environments and continuous development_ | 8       | 12                    | 100                       | No need swap memory             |
 
 # Installation Steps
 
