Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -32,7 +32,14 @@ chmod +x setup.sh
 
 To install the main T-Guard components, you need to install from step 1 to step 6 in Figure 1.
 
-![Figure 1. T-Guard Installer Main Menu](/images/image\(1\).png)
+<img
+  src="/images/image.png"
+  alt="image.png"
+  title="image.png"
+  className="mx-auto"
+/>
+
+/
 
 ## **Step 1: Update System and Install Prerequisites**
 
