--- a/installation.mdx
+++ b/installation.mdx
@@ -30,16 +30,11 @@ chmod +x setup.sh
 ./setup.sh
 ```
 
-To install the main T-Guard components, you need to install from step 1 to step 6 in Figure 1.
+To install the main T-Guard components, you need to install from step 1 to step 4, in Figure 1.
 
-<img
-  src="/images/image.png"
-  alt="image.png"
-  title="image.png"
-  className="mx-auto"
-/>
-
-/
+<Frame caption="Figure 1. T-Guard Installer Main Menu">
+  ![Main Menu Pn](/images/main-menu.png)
+</Frame>
 
 ## **Step 1: Update System and Install Prerequisites**
 
