Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -11,7 +11,12 @@ description: "T-Guard is an open-source unified security solution designed to en
 
 ## Architecture
 
-![image.png](/images/image.png)
+<img
+  src="/images/architect.png"
+  alt="Architect Pn"
+  title="Architect Pn"
+  style={{ width:"100%" }}
+/>
 
 This diagram represents an integrated SoC workflow, utilizing various tools and platforms for comprehensive cybersecurity management. Here are the descriptions and functionalities of the every component within T-Guard:
 
