Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -30,7 +30,7 @@ chmod +x setup.sh
 ./setup.sh
 ```
 
-To install the main T-Guard components, you need to install from step 1 to step 4, in Figure 1.
+To install the main T-Guard components, follow instructions below.
 
 <Frame caption="Figure 1. T-Guard Installer Main Menu">
   ![Main Menu Pn](/images/main-menu.png)
@@ -192,7 +192,7 @@ If you already have an account, log in, click your profile name, and select ‘A
 
 Copy and paste it to the installation, then press **Enter**. Wait until the process is finished.
 
-You’ll be prompted to enter your Shuffle Webhook URL. 
+You’ll be prompted to enter your Shuffle Webhook URL.
 
 <img
   src="/images/webhook4.png"
@@ -207,7 +207,7 @@ To obtain the URL, follow the instructions below.
 - Select **Experienced**.
 - Select **New Workflow**.
 - Specify your preferred **workflow name**—for example, test. \> select **Done**.
-- In the left panel, select **Trigger** tab, then drag the **Webhook **to the middle panel as illustrated below.
+- In the left panel, select **Trigger** tab, then drag the \*\*Webhook \*\*to the middle panel as illustrated below.
 
   ![Webhook Pn](/images/webhook.png)
 - Click on **Webhook** module, then it will show up the configuration panel on the right.
@@ -216,17 +216,17 @@ To obtain the URL, follow the instructions below.
 ![Webhook5 Pn](/images/webhook5.png)
 
 - Paste it to the installation terminal, then press **Enter**. Wait until the process is finished.
-- Go back to the Shuffle, click the **Start **button as illustrated below.
+- Go back to the Shuffle, click the \*\*Start \*\*button as illustrated below.
 
 ![Webhook6 Pn](/images/webhook6.png)
 
-- Next, select the **Shuffle **module in the middle panel, then it will show up the configuration panel on the right.
+- Next, select the \*\*Shuffle \*\*module in the middle panel, then it will show up the configuration panel on the right.
   - In the "Find Actions" parameter, make sure to select '**Repeat back to me**'.
   - In the "Call" parameter, change the value to `$exec`, then click the **Save** button, as illustrated below.
 
   ![Webhook7 Pn](/images/webhook7.png)
 
-Click the **Test Execution** button (play icon). 
+Click the **Test Execution** button (play icon).
 
 <img
   src="/images/play.png"
